:smirk: START INDEX HTML PAGE:

--- a/goedeLandingPage.html
+++ b/goedeLandingPage.html
@@ -9,6 +9,6 @@
     <h1>
         Wat een goede landingpage!
     </h1>
-    <p>Vincent Pinas SD1Db</p>
+    <p>Vincent Pinas SD1Db.</p>
 </body>
 </html>
