:art: CSS ADDED TO LANDING PAGE

--- a/goedeLandingPage.html
+++ b/goedeLandingPage.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goede Landing Page</title>
+    <link rel="stylesheet" href="style/goedeLandingPage.css">
 </head>
 <body>
-    <h1>
-        Wat een goede landingpage!
-    </h1>
-    <p>Vincent Pinas SD1Db.</p>
+    <div class="HERO">
+        <h2 class="main">
+            Wat een goede landingpage!
+        </h2>
+        <p class="extra">Vincent Pinas SD1Db.</p>
+    </div>
 </body>
 </html>
