:art: LES 2 ONT LIST POINTS GOOD LANDING PAGE

--- a/goedeLandingPage.html
+++ b/goedeLandingPage.html
@@ -13,5 +13,19 @@
         </h2>
         <p class="extra">Vincent Pinas SD1Db.</p>
     </div>
+    <div class="points-list">
+        <ul>
+            <li class="points"><strong>Non-linear Navigation</strong><p>In een goede landing page is het handig dat de <br> gebruiker geen moeite hoeft te doen <br> om informatie te zoeken, daarom is een goede navigation <br> nodig om rond de site te komen.</p></li>
+            <li class="points"><strong>Readibility</strong><p>Niet alleen op de landing page, maar op elke pagina <br> moet je de informatie die je daar kan krijgen goed kunnen lezen.</p></li>
+            <li class="points"><strong>Simplicity</strong><p>Je maakt de pagina voor gebruikers, geen enkele gebruiker wil moeite <br> doen om uit te zoeken hoe je service precies werk en waar ze al hun informatie kunnen vinden.</p></li>
+            <li class="points"><strong>Interactivity</strong><p>Een goede pagina maakt gebruik van interactive onderdelen in zijn pagina, dit kunnen dingen zijn als een clickable slideshow, contact form etc.</p></li>
+            <li class="points"><strong>Landingpage! not a home page</strong><p>A landing page is not a home page, it is important for your landing page to show a detailed history of what you have offered and what you can offer.</p></li>
+            <li class="points"><strong>Keep it simple</strong><p>No one wants to waste their time when considering wether to choose your service or not, therefore you should try to give as much detail as possible while keeping it short and getting tot the point.</p></li>
+            <li class="points"><strong>Personality</strong><p>It's not fun to feel like you're reading or talking to a robot with no personality, that's why you should try to put a bit of a more personal feel to it while keeping it professional, for instance if you're making a contact form you should consider using emoji's for the descriptions.</p></li>
+            <li class="points"><strong>Audiance</strong><p>Talk to the specific audiance you're trying to reach, people like it when they have something in common which might lead to a potential customer.</p></li>
+            <li class="points"><strong>Thank you</strong><p>Whenever you're trying to win someone over it is always handy to be nice to them, for instance when filling out a form add a thank you message.</p></li>
+            <li class="points"><strong>Spacing</strong><p>Your customers might have a hard time focusing on the content or information they're trying to find if the page has too much information without spacing between, that's why it's important to put space between your content items.</p></li>
+        </ul>
+    </div>
 </body>
 </html>
