--- a/Les1Landingpage/goedeLandingPage.html
+++ b/Les1Landingpage/goedeLandingPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goede Landing Page</title>
-    <link rel="stylesheet" href="style/goedeLandingPage.css">
+    <link rel="stylesheet" href="../style/goedeLandingPage.css">
 </head>
 <body>
     <div class="HERO">
