:door: LINK TO REAL NEMO ADDED

--- a/Les2Museum/index.html
+++ b/Les2Museum/index.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <img src="gebouwnemo-digidaan.jpg" alt="Gebouw van NEMO">
-    <h1 class="title">NEMO</h1>
+    <a href="https://www.nemosciencemuseum.nl/" target="_blank"><h1 class="title">NEMO</h1></a>
     <div class="HERO">
         <div class="kenmerken">
             <ul class="kenmerk-list">
