--- a/Les2Museum/index.html
+++ b/Les2Museum/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/museum.css">
     <title>Museum NEMO</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <div class="nav">
@@ -35,6 +36,23 @@
             </p>
         </div>
     </div>
+    <footer>
+        <div class="box">
+            <div class="contact">
+                <p>Oosterdok 2, 1011 VX Amsterdam</p>
+                <p>The Netherlands</p>
+                <p>020-244 28 77</p>
+            </div>
+        </div> 
+        <div class="box">
+            <p id="IMPORTANT">Blijf op de hoogte!</p>
+            <div class="socials">
+                <a href="https://twitter.com/NEMOamsterdam" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://www.instagram.com/nemosciencemuseum/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.facebook.com/NEMOsciencemuseum" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            </div>
+        </div>
+    </footer>
 
     
 </body>
