--- a/Les2Museum/inline-block.html
+++ b/Les2Museum/inline-block.html
@@ -11,14 +11,11 @@
             padding: 0 1%;
         }
         section {
-            width: 23%;
-            float: left;
+            display: inline-block;
+            width: 22%;
             padding: 20px;
-            margin: 1%;
-        }
-        footer {
-            clear: left;
-        }
+            margin: 0 1%;
+        } 
     </style>
 </head>
 <body>
@@ -30,7 +27,7 @@
             <li class="nav-item"><a href="flex.html">FlexBox</a></li>
         </ul>
     </div>
-    <h1 id="title">Display - Block</h1>
+    <h1 id="title">Display - Inline Block</h1>
     <main>
         <section class="description">
             <p>NEMO is een musea gericht naar de jeugd, ouders kunnen hier hun kinderen mee naar toe nemen, niet alleen voor een dagje pret maar ook voor een dagje leren!
