--- a/Les2Museum/inline.html
+++ b/Les2Museum/inline.html
@@ -7,17 +7,9 @@
     <title>Museum NEMO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
-        main {
-            padding: 0 1%;
-        }
         section {
-            width: 23%;
-            float: left;
-            padding: 20px;
-            margin: 1%;
-        }
-        footer {
-            clear: left;
+            display: inline;
+            width: 25%;   
         }
     </style>
 </head>
@@ -30,7 +22,7 @@
             <li class="nav-item"><a href="flex.html">FlexBox</a></li>
         </ul>
     </div>
-    <h1 id="title">Display - Block</h1>
+    <h1 id="title">Display - Inline</h1>
     <main>
         <section class="description">
             <p>NEMO is een musea gericht naar de jeugd, ouders kunnen hier hun kinderen mee naar toe nemen, niet alleen voor een dagje pret maar ook voor een dagje leren!
